ssssoooo much work

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
-bro
+<%= render 'home/sections/hero' %>
+<%= render 'home/sections/description' %>
+<%= render 'home/sections/details' %>
+<%= render 'home/sections/partners' %>
+<hr style="max-width: inherit">
+<%= render 'home/sections/application' %>
+<%= render 'home/sections/about' %>
