--- a/app/views/home/sections/_hero.html.erb
+++ b/app/views/home/sections/_hero.html.erb
@@ -6,7 +6,7 @@
       </h1>
       </hr>
       <p>
-        a new-music gathering in Summerville, January 24-30 2017
+        a experimental music gathering in Summerville, January 24-30 2017
       </p>
     </div>
   </div>
