--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,9 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top">co-incidence residency</a>
+      <a class="navbar-brand page-scroll" href="#page-top" style="color: #222">
+        co-incidence residency
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,7 +26,7 @@
           <a class="page-scroll" href="#application">Application</a>
         </li>
         <li>
-          <a class="page-scroll" href="#bio">Bio</a>
+          <a class="page-scroll" href="#about">about</a>
         </li>
       </ul>
     </div>
