--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -6,11 +6,15 @@
           ABOUT
         </h2> -->
         <p class="text-faded">
-          co-incidence, an experimental music residency is a gathering of experimental composer-performers for 6 days hosted by Non-Event at Washington Street Art Space in Boston.
+          co-incidence, an experimental music residency is a gathering of experimental composer-performers for 6 days hosted by Non-Event at Washington Street Art Center in Boston.
         </p>
         <hr class="light">
         <p class="text-faded">
           This project is based on an expanded view of what constitutes art, music, and the traditional concert. Following the example of the revolutionary arts community Black Mountain College, it will bring together a group of radical artists operating in the boundary-zones of their practice to take part in a residency curated as ‘social sculpture.’ Reflecting the values of experimental music, co-incidence will be allowed to grow organically, strongly influenced by the artists who attend: the directors simply provide a time, space, and loose framework. There will be encouraged but not required peer-to-peer meetings between artists in lieu of official lessons, the people attending will not be labeled as student or faculty, and the residency is tuition-free, with an equal stipend offered to artists and directors.
+        </p>
+        <br />
+        <p class="text-faded">
+          Please see a description of our Partners, the Application, and our Budget below.
         </p>
       </div>
     </div>
