--- a/app/views/home/sections/_hero.html.erb
+++ b/app/views/home/sections/_hero.html.erb
@@ -2,11 +2,11 @@
   <div class="header-content">
     <div class="header-content-inner">
       <h1 id="homeHeading">
-        (the) co-incidence residence
+        (the) co-incidence residency
       </h1>
       </hr>
       <p>
-        a experimental music gathering in Summerville, January 24-30 2017
+        a experimental music gathering in Somerville, MA, January 24-30 2017
       </p>
     </div>
   </div>
