--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -20,11 +20,11 @@
           </div>
           <p class="text-muted">
             <a href="http://washingtonst.org/">
-              Washington St
+              Washington Street Art Center
             </a>
           </p>
           <p>
-            paragraph about washington st here
+            Washington St. is home to 20 artists who work in a broad range of media. From sculpture to paper cutting, painting to book binding and everything in between - the collaborative houses a cornucopia of creatives from many different backgrounds. With its own photo lab, Washington St. also hosts photography members who share the darkroom and photo studio.​ Additionally, Washington St. has served for many years as an experimental music venue, directed by composer/performers Michael Rosenstein, Jesse Collins, and Morgan Evans-Weiler.​
           </p>
         </div>
       </div>
@@ -43,7 +43,7 @@
             </a>
           </p>
           <p>
-            paragraph about non-event here
+            Founded in 2001, Non-Event has presented over 260 concerts in and around Boston in a wide variety of venues from coffee shops, galleries, and loft spaces to former movie palaces, university lecture halls, museums, night clubs, 19th-century ballrooms, a Victorian-era pumping station, and inside Boston's iconic City Hall. Non-Event also organizes a longstanding series of informal monthly coffee house concerts featuring local musicians and sound artists. These are held at Café Fixe in Brookline and are made possible in part by the support of a grant from the Brookline Commission for the Arts.
           </p>
         </div>
       </div>
@@ -62,7 +62,7 @@
             </a>
           </p>
           <p>
-            paragraph about michael here
+            Michael Pisaro is an experimental composer and performer.
           </p>
         </div>
       </div>
