--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <%= render 'home/sections/hero' %>
 <%= render 'home/sections/description' %>
+<%= render 'home/sections/who' %>
 <%= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
 <hr style="max-width: inherit">
