IT'S NOT A TUMOUR

--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -6,6 +6,19 @@
   } 
 }
 
-#partners, #about {
+#details {
   background-color: #eee;
+}
+
+#application {
+  background-color: #337ab7;
+}
+
+h4 {
+  color: #F05F40 !important;
+  margin-bottom: 5px !important;
+}
+
+h5 {
+  margin-top: 0 !important;
 }
