--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -1,4 +1,4 @@
-<section id="details">
+<section id="who">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -11,28 +11,30 @@
   </div>
   <div class="container">
     <div class="row">
-      <ul>
-        <li>
-          <p>
-            Six Guest Artists, (to be) determined via application
-          </p>
-        </li>
-        <li>
-          <p>
-            One Resident Artist, determined via Directors' invitation: Michael Pisaro
-          </p>
-        </li>
-        <li>
-          <p>
-            Two Co-Directors: Aaron Foster Bresley and Luke Martin
-          </p>
-        </li>
-        <li>
-          <p>
-            Open to the Public: this residency is entirely open-door: any member of the community is welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
-          </p>
-        </li>
-      </ul>
+      <div class="col-lg-8 col-lg-offset-2">
+        <ul>
+          <li>
+            <p>
+              Six Guest Artists, (to be) determined via application
+            </p>
+          </li>
+          <li>
+            <p>
+              One Resident Artist, determined via Directors' invitation: Michael Pisaro
+            </p>
+          </li>
+          <li>
+            <p>
+              Two Co-Directors: Aaron Foster Bresley and Luke Martin
+            </p>
+          </li>
+          <li>
+            <p>
+              Open to the Public: this residency is entirely open-door: any member of the community is welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
