clean up and new non-event text

--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -43,7 +43,7 @@
             </a>
           </p>
           <p>
-            Founded in 2001, Non-Event has presented over 260 concerts in and around Boston in a wide variety of venues from coffee shops, galleries, and loft spaces to former movie palaces, university lecture halls, museums, night clubs, 19th-century ballrooms, a Victorian-era pumping station, and inside Boston's iconic City Hall. Non-Event also organizes a longstanding series of informal monthly coffee house concerts featuring local musicians and sound artists. These are held at Café Fixe in Brookline and are made possible in part by the support of a grant from the Brookline Commission for the Arts.
+            Non-Event is a Boston-based concert series devoted to the presentation of the finest in experimental, abstract, improvised, and new music from New England and around the world. Founded in 2001, Non-Event has presented over 260 concerts in and around Boston in a wide variety of venues from coffee shops, galleries, and loft spaces to former movie palaces, university lecture halls, museums, night clubs, 19th-century ballrooms, a Victorian-era pumping station, and inside Boston's iconic City Hall. In addition to working with numerous venues and organizations over the past 15 years, Non-Event organizes a longstanding series of informal monthly coffee house concerts featuring local musicians and sound artists, held at Café Fixe in Brookline and made possible in part by the Brookline Commission for the Arts.
           </p>
         </div>
       </div>
