change up who section

--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -30,7 +30,7 @@
           </li>
           <li>
             <p>
-              Open to the Public: this residency is entirely open-door: any member of the community is welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
+              The community: this residency is entirely open-door. Members of the community are welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
             </p>
           </li>
         </ul>
