--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -33,15 +33,13 @@
           </h5>
         </div>
         <div class="text">
-          <p>
-            This show will feature local Boston artists performing two new works by Boston-based experimental artists and one by co-incidence Resident Artist Michael Pisaro.
-          </p>
+          This show will feature local Boston artists performing two new works by Boston-based experimental artists and one by co-incidence Resident Artist Michael Pisaro.
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="title">
           <h4>
-            Once Far, Now Close
+            Once Far, Now Hear
           </h4>
         </div>
         <div class="date">
