--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          While most of this will be determined by the Artists, we do have a few 'fixed points' during the residency. Namely, three shows at Washington Street Art Center:
+          While most of this will be determined by the Artists, we do have a few 'fixed points' during the residency. Namely, three performances at Washington Street Art Center:
         </p>
       </div>
     </div>
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          In addition to this, the co-incidence artists will be at Washington Street Art Center morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the concerts, is a loose framework that can be altered 'during performance' (during the residency) by the Artists as they (we) see fit.
+          In addition to these events, the co-incidence artists will be at Washington Street Art Center morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the performances, provides a flebible framework that can be altered during the residency by the artists as they (we) see fit.
         </p>
       </div>
     </div>
