--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -39,7 +39,7 @@
           </div>
           <p class="text-muted">
             <a href="http://nonevent.org/">
-              non-event
+              Non-Event
             </a>
           </p>
           <p>
