--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p>
-          In addition to these events, the co-incidence artists will be at Washington Street Art Center morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the performances, provides a flebible framework that can be altered during the residency by the artists as they (we) see fit.
+          In addition to these events, the co-incidence artists will be at Washington Street Art Center morning, afternoon, and evening, rehearsing works and discussing relevant (or not) topics together. All of this, with the exception of the performances, provides a flexible framework that can be altered during the residency by the artists as they (we) see fit.
         </p>
       </div>
     </div>
