copy and format

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,6 @@
 <%= render 'home/sections/who' %>
 <%= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
-<hr style="max-width: inherit">
+<!-- <hr style="max-width: inherit"> -->
 <%= render 'home/sections/application' %>
 <%= render 'home/sections/about' %>
