--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -1,6 +1,9 @@
 .details-pic {
   height: 150px;
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 5px;
+  margin-top: 5px;
   img {
     height: 100%;
   } 
@@ -21,4 +24,10 @@ h4 {
 
 h5 {
   margin-top: 0 !important;
+}
+
+.partner-link {
+  padding-bottom: 5px;
+  padding-top: 5px;
+  text-decoration: underline;
 }
