--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Partners</h2>
+        <h2 class="section-heading">
+          Collaborators
+        </h2>
         <hr class="primary">
       </div>
     </div>
@@ -12,13 +14,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-          <h3>
-            Hosted by:
-          </h3>
+          <h4>
+            Hosted by
+          </h4>
           <div class="details-pic">
             <%= image_tag asset_url("washingtub.jpg") %>
           </div>
-          <p class="text-muted">
+          <p class="text-muted partner-link">
             <a href="http://washingtonst.org/">
               Washington Street Art Center
             </a>
@@ -31,13 +33,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-          <h3>
-            In Partnership with:
-          </h3>
+          <h4>
+            In Partnership with
+          </h4>
           <div class="details-pic">
             <%= image_tag asset_url("non-event.jpg") %>
           </div>
-          <p class="text-muted">
+          <p class="text-muted partner-link">
             <a href="http://nonevent.org/">
               Non-Event
             </a>
@@ -50,13 +52,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-          <h3>
-            Resident Artist:
-          </h3>
+          <h4>
+            Resident Artist
+          </h4>
           <div class="details-pic">
             <%= image_tag asset_url("with_cocoa.jpg") %>
           </div>
-          <p class="text-muted">
+          <p class="text-muted partner-link">
             <a href="http://michaelpisaro.blogspot.com//">
               Michael Pisaro
             </a>
