did you see the pool???

--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -17,7 +17,7 @@
           <h4>
             Hosted by
           </h4>
-          <div class="details-pic">
+          <div class="details-pic washingtub-pic">
             <%= image_tag asset_url("washingtub.jpg") %>
           </div>
           <p class="text-muted partner-link">
