michael bio-ness

--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -66,6 +66,17 @@
           <p>
             Michael Pisaro is an experimental composer and performer.
           </p>
+          --
+          <p>
+            "In baseball, a very interesting situation occurs every time a ball is pitched. First the catcher gives a hand signal to the pitcher, telling him which pitch to throw. The catcher is making this choice based on a thorough knowledge of each batter and of the pitcher's strong and weak pitches. Once he agrees to the pitch, the pitcher throws, as best he can, the pitch indicated. There are many variables that can influence how the pitch is thrown: speed, spin on the ball, the change of direction of the ball, etc. Each pitch, though it might be called the same thing as another, is therefore unique."
+          </p>
+          --
+          <p>
+            From
+            <a href="http://www.wandelweiser.de/_michael-pisaro/texts.html#HIT_OR_MISS"> 
+              Hit Or Miss
+            </a>
+          </p>
         </div>
       </div>
     </div>
