--- a/app/views/home/sections/_application.html.erb
+++ b/app/views/home/sections/_application.html.erb
@@ -11,7 +11,13 @@
   </div>
   <div class="container">
     <div class="row text-center" >
-      Coming soon! 
+      <%= form_for(@coincident) do |f| %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+      <% end %>
     </div>
   </div>
 </section>
