--- a/app/views/home/sections/_application.html.erb
+++ b/app/views/home/sections/_application.html.erb
@@ -12,11 +12,51 @@
   <div class="container">
     <div class="row text-center" >
       <%= form_for(@coincident) do |f| %>
+        <h3>
+          personal info
+        </h3>
         <%= f.label :name %>
         <%= f.text_field :name %>
-
+<br />
         <%= f.label :email %>
         <%= f.text_field :email %>
+<br />
+        <%= f.label :birthday %>
+        <%= f.date_field :birthday %>
+<br />
+        <%= f.label :address %>
+        <%= f.text_area :address %>
+
+        <h3>
+          background / info
+        </h3>
+        <%= f.label :link1 %>
+        <%= f.text_field :link1 %>
+<br />
+        <%= f.label :link2 %>
+        <%= f.text_field :link2 %>
+<br />
+        <%= f.label :link3 %>
+        <%= f.text_field :link3 %>
+<br />
+        <%= f.label :website %>
+        <%= f.text_field :website %>
+<br />
+        <%= f.label :cv_resume_link %>
+        <%= f.text_field :cv_resume_link %>
+
+        <h3>
+          application
+        </h3>
+        <%= f.label :instruments %>
+        <%= f.text_field :instruments %>
+<br />
+        <%= f.label :why_apply %>
+        <%= f.text_area :why_apply %>
+<br />
+        <%= f.label ':project_description' %>
+        <%= f.text_area :project_description %>
+
       <% end %>
     </div>
   </div>
