--- a/app/views/home/sections/_application.html.erb
+++ b/app/views/home/sections/_application.html.erb
@@ -11,52 +11,54 @@
   </div>
   <div class="container">
     <div class="row text-center" >
-      <%= form_for(@coincident) do |f| %>
+      <!-- add back in 'remote true' and coffee script to make cleaner -->
+      <%= form_for(@coincident, remote: true) do |f| %>
         <h3>
-          personal info
+          Personal Info
         </h3>
         <%= f.label :name %>
         <%= f.text_field :name %>
-<br />
+        <br />
         <%= f.label :email %>
         <%= f.text_field :email %>
-<br />
+        <br />
         <%= f.label :birthday %>
         <%= f.date_field :birthday %>
-<br />
+        <br />
         <%= f.label :address %>
         <%= f.text_area :address %>
 
         <h3>
-          background / info
+          Portfolio
         </h3>
-        <%= f.label :link1 %>
+        <%= f.label 'Work Sample 1' %>
         <%= f.text_field :link1 %>
-<br />
-        <%= f.label :link2 %>
+        <br />
+        <%= f.label 'Work Sample 2' %>
         <%= f.text_field :link2 %>
-<br />
-        <%= f.label :link3 %>
+        <br />
+        <%= f.label 'Work Sample 3' %>
         <%= f.text_field :link3 %>
-<br />
+        <br />
         <%= f.label :website %>
         <%= f.text_field :website %>
-<br />
-        <%= f.label :cv_resume_link %>
+        <br />
+        <%= f.label 'CV / Resume' %>
         <%= f.text_field :cv_resume_link %>
 
         <h3>
-          application
+          Proposal
         </h3>
-        <%= f.label :instruments %>
+        <%= f.label 'Instrument(s) that you play' %>
         <%= f.text_field :instruments %>
-<br />
+        <br />
         <%= f.label :why_apply %>
         <%= f.text_area :why_apply %>
-<br />
-        <%= f.label ':project_description' %>
+        <br />
+        <%= f.label :project_description %>
         <%= f.text_area :project_description %>
 
+        <%= f.submit %>
       <% end %>
     </div>
   </div>
