--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -1,5 +1,15 @@
 <section>
   <div class="container">
+    <div class="row text-center">
+      <h1>
+        admin section!
+      <h1>
+    </div>
+  </div>
+</section
+
+<section>
+  <div class="container">
     <% @coincidents.each do |coincident| %>
       <p>
         <%= coincident.name %>
