freelancer copy => activate!

--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -6,7 +6,7 @@
           ABOUT
         </h2> -->
         <p class="text-faded">
-          co-incidence, an experimental music residency is a gathering of experimental composer-performers for 6 days hosted by Non-Event at Washington Street Art Center in Boston.
+          <i>co-incidence, an experimental music residency </i>is a gathering of experimental composer-performers for six days hosted by Non-Event at Washington Street Art Center in Boston.
         </p>
         <hr class="light">
         <p class="text-faded">
@@ -14,7 +14,7 @@
         </p>
         <br />
         <p class="text-faded">
-          Please see a description of our Partners, the Application, and our Budget below.
+          Please see a description of our collaborators, the application, and our budget below.
         </p>
       </div>
     </div>
