--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -79,4 +79,15 @@
       </div>
     </div>
   </div>
+  <br />
+  <br />
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+        <p>
+          Video/audio recordings and photographs of all performances will be provided, in addition to captured moments of the Residency.
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
