--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -28,6 +28,13 @@
           <p>
             Washington St. is home to 20 artists who work in a broad range of media. From sculpture to paper cutting, painting to book binding and everything in between - the collaborative houses a cornucopia of creatives from many different backgrounds. With its own photo lab, Washington St. also hosts photography members who share the darkroom and photo studio.​ Additionally, Washington St. has served for many years as an experimental music venue, directed by composer/performers Michael Rosenstein, Jesse Collins, and Morgan Evans-Weiler.​
           </p>
+          <!-- --
+          <p>
+            From
+            <a href="http://www.wandelweiser.de/_michael-pisaro/texts.html#HIT_OR_MISS"> 
+              Hit Or Miss
+            </a> -->
+          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 text-center">
