--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
-          Who will attend the residency?
+          Who will attend?
         </h2>
         <hr class="primary">
       </div>
@@ -30,7 +30,7 @@
           </li>
           <li>
             <p>
-              The community: this residency is entirely open-door. Members of the community are welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
+              The community: this residency is entirely open-door. Members of the Community are welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
             </p>
           </li>
         </ul>
