--- a/app/views/home/sections/_details.html.erb
+++ b/app/views/home/sections/_details.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
-          What will take place?
+          WHAT WILL TAKE PLACE?
         </h2>
         <hr class="primary">
       </div>
