--- a/app/views/home/sections/_who.html.erb
+++ b/app/views/home/sections/_who.html.erb
@@ -30,7 +30,7 @@
           </li>
           <li>
             <p>
-              The community: this residency is entirely open-door. Members of the Community are welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
+              The Community: this residency is entirely open-door. Members of the community are welcome to join us for meals, workshops, discussions, performances, rehearsals, etc.
             </p>
           </li>
         </ul>
