add links in about section, changes up some copy

--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -14,7 +14,7 @@
         </p>
         <br />
         <p class="text-faded">
-          Please see a description of our collaborators, the application, and our budget below.
+          Please see a description of our collaborators, the application, and further details below.
         </p>
       </div>
     </div>
