--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
           <a class="page-scroll" href="#details">Details</a>
         </li>
         <li>
-          <a class="page-scroll" href="#partners">Partners</a>
+          <a class="page-scroll" href="#partners">COLLABORATORS</a>
         </li>
         <li>
           <a class="page-scroll" href="#application">Application</a>
